syntax = "proto3";

option go_package = "gen/metadata/proto/v1";

service HelloServer {
    rpc SayHello(HelloRequest) returns (HelloReply);
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}